--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dev_dependencies:
 
   flutter_lints: ^3.0.0
   import_sorter: ^4.6.0  # run 'flutter pub run import_sorter:main'
+  comments_remover: ^1.0.2
 
 flutter:
   uses-material-design: true
